--- a/index.html
+++ b/index.html
@@ -1,230 +1,12 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>EdgePane —— Pane Perfect Experience</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" type="image/png" href="./assets/images/logo-d.png" />
-
-        <!-- Then load Tailwind so it can override defaults -->
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
-        <!-- Load custom styles first -->
-        <link rel="stylesheet" href="./css/edgepane.css" />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-        />
-    </head>
-    <style></style>
-
-    <body
-        class="h-screen flex text-xs sm:text-sm relative overflow-hidden antialiased"
-    >
-        <!-- Overlay for small screens -->
-        <div class="sidebar-overlay"></div>
-
-        <!-- Sidebar -->
-        <nav class="sidebar bg-neutral-800" role="navigation">
-            <!-- Sidebar header -->
-            <div class="sidebar-header">
-                <img src="" alt="Logo" class="sidebar-logo" />
-                <div class="sidebar-title">
-                    <p class="sidebar-brand-name"></p>
-                    <p class="sidebar-brand-tagline"></p>
-                </div>
-            </div>
-
-            <!-- Sidebar menu -->
-            <ul class="sidebar-menu">
-                <!-- Section: GENERAL -->
-                <li
-                    class="sidebar-section-heading"
-                    data-section-heading="GENERAL"
-                ></li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-columns-gap"></i
-                        ></span>
-                        <span class="sidebar-link-text">Dashboard</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-person"></i
-                        ></span>
-                        <span class="sidebar-link-text">Profile</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-bell"></i
-                        ></span>
-                        <span class="sidebar-link-text">Notifications</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-chat"></i
-                        ></span>
-                        <span class="sidebar-link-text">Messages</span>
-                    </a>
-                </li>
-
-                <!-- Section: SYSTEM -->
-                <li
-                    class="sidebar-section-heading"
-                    data-section-heading="SYSTEM"
-                ></li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-hdd"></i
-                        ></span>
-                        <span class="sidebar-link-text">Storage</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-wifi"></i
-                        ></span>
-                        <span class="sidebar-link-text">Network</span>
-                    </a>
-                </li>
-                <li class="sidebar-dropdown" id="settings">
-                    <div
-                        class="dropdown-toggle"
-                        role="button"
-                        tabindex="0"
-                        aria-expanded="false"
-                    >
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-gear"></i
-                        ></span>
-                        <span class="sidebar-link-text">Settings</span>
-                        <span class="dropdown-arrow"></span>
-                    </div>
-                    <ul class="dropdown-content">
-                        <li>
-                            <a href="" class="sidebar-link"
-                                ><span class="sidebar-link-text"
-                                    >Account</span
-                                ></a
-                            >
-                        </li>
-                        <li>
-                            <a href="" class="sidebar-link"
-                                ><span class="sidebar-link-text"
-                                    >System</span
-                                ></a
-                            >
-                        </li>
-                        <li>
-                            <a href="" class="sidebar-link"
-                                ><span class="sidebar-link-text"
-                                    >Preferences</span
-                                ></a
-                            >
-                        </li>
-                    </ul>
-                </li>
-
-                <!-- Section: REPORTS -->
-                <li
-                    class="sidebar-section-heading"
-                    data-section-heading="REPORTS"
-                ></li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-bar-chart"></i
-                        ></span>
-                        <span class="sidebar-link-text">Analytics</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-clipboard-data"></i
-                        ></span>
-                        <span class="sidebar-link-text">Reports</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-graph-up"></i
-                        ></span>
-                        <span class="sidebar-link-text">Trends</span>
-                    </a>
-                </li>
-
-                <!-- Section: TOOLS -->
-                <li
-                    class="sidebar-section-heading"
-                    data-section-heading="TOOLS"
-                ></li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-folder"></i
-                        ></span>
-                        <span class="sidebar-link-text">File Manager</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-terminal"></i
-                        ></span>
-                        <span class="sidebar-link-text">Console</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="sidebar-link">
-                        <span class="sidebar-link-icon"
-                            ><i class="bi bi-bug"></i
-                        ></span>
-                        <span class="sidebar-link-text">Debug</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-
-        <!-- Main content -->
-        <div class="main-content">
-            <div class="max-w-4xl w-full mx-auto">
-                <button class="sidebar-toggle">☰</button>
-            </div>
-        </div>
-
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="./js/edgepane.js"></script>
-        <script>
-            edgePane.init({
-                sidebarState: "open",
-                hoverExpand: true,
-                closeOnClickOutside: true,
-                dropdownMode: "single",
-                rememberDropdowns: true,
-                fontFamily: "'Montserrat', sans-serif",
-                sidebarWidth: "18rem",
-                sidebarColor: "rgba(225,225,225,1)",
-                textColor: "rgba(70,70,70,1)",
-                activeLinkBg: "rgba(180,180,180,1)",
-                activeLinkColor: "rgba(70,70,70,1)",
-                showBrand: true,
-                brand: {
-                    brandLogoSrc: "./assets/images/logo-d.png",
-                    brandName: "EdgePane",
-                    brandTagline: "Pane Perfect Experience",
-                },
-            });
-        </script>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>EdgePane —— Pane Perfect Experience</title>
+</head>
+<body>
+<h1>EdgePane —— Pane Perfect Experience</h1>
+<a href="./example/demo.html">View Demo</a>
+</body>
 </html>
