--- a/example/demo.html
+++ b/example/demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Example —— EdgePane</title>
+        <title>EdgePane —— Pane Perfect Experience</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/png" href="./assets/images/logo-d.png" />
 
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
         <!-- Load custom styles first -->
-        <link rel="stylesheet" href="../dist/edgepane.min.css" />
+        <link rel="stylesheet" href="../src/css/edgepane.css" />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -208,7 +208,7 @@
         </div>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="../dist/edgepane.min.js"></script>
+        <script src="../src/js/edgepane.js"></script>
         <script>
             edgePane.init({
                 sidebarState: "open",
